--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "deepmerge"
   ],
   "author": "Yusuke Goto",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ygoto3/simple-deep-assign/issues"
   },
@@ -29,15 +28,19 @@
     "type": "flow",
     "lint": "eslint index.js simpleDeepAssign.js simpleDeepAssign.test.js",
     "doc": "esdoc",
-    "gen-flow-files": "flow gen-flow-files ./index.js > ./index.js.flow"
+    "gen-flow-files": "flow gen-flow-files ./index.js > ./index.js.flow",
+    "deploy:doc": "gh-pages -d docs",
+    "codecov": "codecov"
   },
   "devDependencies": {
     "ava": "1.0.0-beta.6",
+    "codecov": "^3.0.4",
     "esdoc": "^1.1.0",
     "esdoc-node": "^1.0.3",
     "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^5.3.0",
     "flow-bin": "^0.78.0",
+    "gh-pages": "^1.2.0",
     "nyc": "^12.0.2"
   }
 }
